test/regress/cov3-annotate-missing-close-brace.test
; Test error for missing closing brace in annotation
; Covers annotate.cc lines 136-137 (missing closing brace)

2024/01/01 Test
    Assets:Brokerage    10 AAPL {$150
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Assets:Brokerage    10 AAPL {$150
                      ^^^^^^^^^^^^^
Error: Commodity lot price lacks closing brace
end test
